# MyBlog

./: .gitignore  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini
boards/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py  wsgi.py
config/settings/: common.py  dev.py  prod.py
templates/: base.html  home.html
templates/board/: board_create.html
templates/boards/: board_detail.html  board_edit.html  board_list.html
templates/tag/: tag_search.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
