[tool.poetry]
name = "myblog"
version = "0.1.0"
description = ""
authors = ["hongsub <hong9506@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
mysqlclient = "^2.1.1"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
