[tool.poetry]
name = "myblog"
version = "0.1.0"
description = ""
authors = ["hongsub <hong9506@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
mysqlclient = "^2.1.1"
pytest-django = "^4.5.2"
python-dotenv = "^0.21.0"
django-dotenv = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
